@@ -36,6 +36,7 @@ Minor Changes:
    functions. Suggested by Trelane@M*U*S*H. [MG]
  * Mortals can now use @search to find any objects they can examine.
    Suggested by Paige. [MG]
+ * @function names can start with numbers again. Requested by Mercutio. [MG]
    
 Functions:
  * ibreak(), for breaking out of an iter() loop. [Rhost] [MG]
